src/qt/libqjsonobject.bf

extension CQt
{
	[LinkName("QJsonObject__const_iterator_new")]
	public static extern void* QJsonObject__const_iterator_new(QJsonObject__const_iterator* other);
	[LinkName("QJsonObject__const_iterator_new2")]
	public static extern void* QJsonObject__const_iterator_new2();
	[LinkName("QJsonObject__const_iterator_new3")]
	public static extern void* QJsonObject__const_iterator_new3(void* obj, int32 index);
	[LinkName("QJsonObject__const_iterator_new4")]
	public static extern void* QJsonObject__const_iterator_new4(QJsonObject__iterator* other);
	[LinkName("QJsonObject__const_iterator_new5")]
	public static extern void* QJsonObject__const_iterator_new5(QJsonObject__const_iterator* other);
	[LinkName("QJsonObject__const_iterator_OperatorAssign")]
	public static extern void QJsonObject__const_iterator_OperatorAssign(void* c_this, QJsonObject__const_iterator* other);
	[LinkName("QJsonObject__const_iterator_Key")]
	public static extern libqt_string QJsonObject__const_iterator_Key(void* c_this);
	[LinkName("QJsonObject__const_iterator_Value")]
	public static extern void QJsonObject__const_iterator_Value(void* c_this);
	[LinkName("QJsonObject__const_iterator_OperatorMultiply")]
	public static extern void QJsonObject__const_iterator_OperatorMultiply(void* c_this);
	[LinkName("QJsonObject__const_iterator_OperatorMinusGreater")]
	public static extern void* QJsonObject__const_iterator_OperatorMinusGreater(void* c_this);
	[LinkName("QJsonObject__const_iterator_OperatorSubscript")]
	public static extern void QJsonObject__const_iterator_OperatorSubscript(void* c_this, int32 j);
	[LinkName("QJsonObject__const_iterator_OperatorEqual")]
	public static extern bool QJsonObject__const_iterator_OperatorEqual(void* c_this, QJsonObject__const_iterator* other);
	[LinkName("QJsonObject__const_iterator_OperatorNotEqual")]
	public static extern bool QJsonObject__const_iterator_OperatorNotEqual(void* c_this, QJsonObject__const_iterator* other);
	[LinkName("QJsonObject__const_iterator_OperatorLesser")]
	public static extern bool QJsonObject__const_iterator_OperatorLesser(void* c_this, QJsonObject__const_iterator* other);
	[LinkName("QJsonObject__const_iterator_OperatorLesserOrEqual")]
	public static extern bool QJsonObject__const_iterator_OperatorLesserOrEqual(void* c_this, QJsonObject__const_iterator* other);
	[LinkName("QJsonObject__const_iterator_OperatorGreater")]
	public static extern bool QJsonObject__const_iterator_OperatorGreater(void* c_this, QJsonObject__const_iterator* other);
	[LinkName("QJsonObject__const_iterator_OperatorGreaterOrEqual")]
	public static extern bool QJsonObject__const_iterator_OperatorGreaterOrEqual(void* c_this, QJsonObject__const_iterator* other);
	[LinkName("QJsonObject__const_iterator_OperatorPlusPlus")]
	public static extern QJsonObject__const_iterator* QJsonObject__const_iterator_OperatorPlusPlus(void* c_this);
	[LinkName("QJsonObject__const_iterator_OperatorPlusPlusWithInt")]
	public static extern QJsonObject__const_iterator QJsonObject__const_iterator_OperatorPlusPlusWithInt(void* c_this, int32 param1);
	[LinkName("QJsonObject__const_iterator_OperatorMinusMinus")]
	public static extern QJsonObject__const_iterator* QJsonObject__const_iterator_OperatorMinusMinus(void* c_this);
	[LinkName("QJsonObject__const_iterator_OperatorMinusMinusWithInt")]
	public static extern QJsonObject__const_iterator QJsonObject__const_iterator_OperatorMinusMinusWithInt(void* c_this, int32 param1);
	[LinkName("QJsonObject__const_iterator_OperatorPlus")]
	public static extern QJsonObject__const_iterator QJsonObject__const_iterator_OperatorPlus(void* c_this, int32 j);
	[LinkName("QJsonObject__const_iterator_OperatorMinus")]
	public static extern QJsonObject__const_iterator QJsonObject__const_iterator_OperatorMinus(void* c_this, int32 j);
	[LinkName("QJsonObject__const_iterator_OperatorPlusAssign")]
	public static extern QJsonObject__const_iterator* QJsonObject__const_iterator_OperatorPlusAssign(void* c_this, int32 j);
	[LinkName("QJsonObject__const_iterator_OperatorMinusAssign")]
	public static extern QJsonObject__const_iterator* QJsonObject__const_iterator_OperatorMinusAssign(void* c_this, int32 j);
	[LinkName("QJsonObject__const_iterator_OperatorMinusWithQJsonObjectconstIterator")]
	public static extern int32 QJsonObject__const_iterator_OperatorMinusWithQJsonObjectconstIterator(void* c_this, QJsonObject__const_iterator j);
	[LinkName("QJsonObject__const_iterator_OperatorEqualWithOther")]
	public static extern bool QJsonObject__const_iterator_OperatorEqualWithOther(void* c_this, QJsonObject__iterator* other);
	[LinkName("QJsonObject__const_iterator_OperatorNotEqualWithOther")]
	public static extern bool QJsonObject__const_iterator_OperatorNotEqualWithOther(void* c_this, QJsonObject__iterator* other);
	[LinkName("QJsonObject__const_iterator_OperatorLesserWithOther")]
	public static extern bool QJsonObject__const_iterator_OperatorLesserWithOther(void* c_this, QJsonObject__iterator* other);
	[LinkName("QJsonObject__const_iterator_OperatorLesserOrEqualWithOther")]
	public static extern bool QJsonObject__const_iterator_OperatorLesserOrEqualWithOther(void* c_this, QJsonObject__iterator* other);
	[LinkName("QJsonObject__const_iterator_OperatorGreaterWithOther")]
	public static extern bool QJsonObject__const_iterator_OperatorGreaterWithOther(void* c_this, QJsonObject__iterator* other);
	[LinkName("QJsonObject__const_iterator_OperatorGreaterOrEqualWithOther")]
	public static extern bool QJsonObject__const_iterator_OperatorGreaterOrEqualWithOther(void* c_this, QJsonObject__iterator* other);
	/// Delete this object from C++ memory
	[LinkName("QJsonObject__const_iterator_Delete")]
	public static extern void QJsonObject__const_iterator_Delete(void* self);
}